# fastapi-template

./: .env  .gitignore  Dockerfile  Dockerfile.lint  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/core/: config.py  main.py  redis_client.py  service.py
src/db/: base.py  connection.py  mixins.py  repositories.py
src/db/alembic/: env.py
src/db/alembic/versions/: 5a8a570fb0c9_table_users.py
src/db/models/: user.py
src/integration_tests/: conftest.py  shared.py
src/integration_tests/api/: base.py  test_user.py
src/integration_tests/factories/: user.py
src/modules/user/: controller.py  repository.py  service.py
src/modules/user/schemas/: user_dto.py
src/shared/: api_client_utils.py  controllers.py  db_utils.py  decorators.py  exceptions.py  list_queries.py  type_var.py
src/shared/schemas/: filter_model.py  total_list.py
src/shared/tests/: test_api_client_utils.py
